--- a/Prueba/src/app/app.component.css
+++ b/Prueba/src/app/app.component.css
@@ -7,12 +7,18 @@
   }
 
   .mat-stepper-horizontal, .mat-stepper-vertical {
-    background-color: #9c9393;
+    background-color: #78a3ad;
     margin-left: 142px;
     margin-right: 110px;
     margin-top: 114px;
-    margin-bottom: 70px;;
+    margin-bottom: 70px;
+    border-radius: 5px;
   }
+
+
+.mat-list-item {
+  color: #000;
+}
 
 
   .card-container {
@@ -46,28 +52,19 @@
 
 
 
-	  .card.highlight-card {
-		background-color: #1976d2;
-		color: white;
-		font-weight: 600;
-		border: none;
-		width: auto;
-		min-width: 30%;
-		position: relative;
-	  }
 
 	  .button {
-	  background-color: #1976d2;
+	  background-color: #0096ad;
 	  border: none;
 	  padding: 20px 34px;
-	  font-size: 16px;
+	  font-size: 18px;
 	  margin: 4px 2px;
 	  color: #eee;
 	  display: table-cell;
 	  margin-left: 28pc;
   }
   .btn {
-	  background-color: #1976d2;
+	  background-color: #0096ad;
 	  border: none;
     padding: 20px;
 
@@ -82,16 +79,40 @@
   }
 
 
-  .mat-radio-outer-circle {
-
+  .mat-radio-button{
     border-style: groove;
-    border-radius: 100%;
+    border-radius: 50%;
+    width: 20px;
+    height: 20px;
+    border-color: black !important;
+
 }
 
+.mat-radio-label {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  /* cursor: pointer; */
+  display: inline-flex;
+  /* align-items: center; */
+  /* white-space: nowrap; */
+  /* vertical-align: middle; */
+  width: 100%;
+}
+
+
+.cdk-visually-hidden {
+
+    position: initial;
+
+}
 .mat-form-field{
   margin-top: 16px;
-  width: 37%;
-  margin-left: 30%;
+  width: 70%;
+  font-size: 18px;
+  color: #fff;
+  mix-blend-mode: exclusion;
 }
 .mat-radio-button {
   margin: 14px;
