--- a/Prueba/src/app/app.component.html
+++ b/Prueba/src/app/app.component.html
@@ -1,22 +1,18 @@
 
-<mat-horizontal-stepper #stepper>
+<mat-horizontal-stepper    #stepper>
   <mat-step >
     <ng-template matStepLabel>Registro Covid-19</ng-template>
       <div class="card">
-        <samp style="color: darkslategray;">
-          <h2> Esta heramienta ayudara a las empresas a comprender qué hacer a continuacion con respecto al COVID-19.</h2>
-          Autorizo a Suramericana SA. y a mi empleador e\ lralamiemo de mis dams personales, incluyendo ‘05 de salud que son sensibles, con la
-        ﬁnalidad de desarmHal acciones de promocié ,prevenmon, lralarmenlo para la geslién de nesgo en salud y/o lreme a la propagacién, contagwo y
-        control de comm 9, acolde con la nolmado por el Ministerlo de Samd y Ploleccién Sacral y las dema’s amoridades compaemes, y para las
-        dema‘s ﬁnalrdades que se encuenuan es‘ablecidas en la politica de privacidad que puede ser consunaua en www.5uramelicana,com donde
-        adema’s se encuenlran los canales de contacto, y la (Mme de ejercer mis derechos a revocar la amorizacion, comer, actualizar, reclmcar y
-        supnmir rm mlolmacién.
+        <samp style="color: #53565a;">
+          <h1 style="color: #0033a0; font-family: Barlow,sans-serif;"> Esta heramienta ayudara a las empresas a comprender qué hacer a continuacion con respecto al COVID-19.</h1>
+          Autorizo a Suramericana SA. y a mi empleador el tratamiento de mis datos personales, incluyendo los del la salud que son sensibles, con la
+          finalidad de desarrollar acciones  de promoción, prevencíon tratamientos para  la gestion d riesgo en la salud y/o frente a la propagacion, contagio y
+          control de COVID-19, acorde con lo normado por el ministerio de Salud y Protección Social y las demas autoridades competentes, y para las demás se
+          se encuentran  los canales  de canales de contacto,  y la forma de ejercer mis derechos a la revocar las autorizacion, conocer,actulizar,rectificar y suprimir mi informacion<br><br>
 
-        Sera' puslble compamr mformamdn can dwsuntas enudades pﬂbhcas (del mvel central, descemrallzadas y de vIgIIancIa y cnnlrcl. y dema’s
-        amundades admlnlstratlvas y jurlsdmclona‘es). para Iomar acclones freme a la propagamdn. contaglo y Central de COVlDr19
-
-        Se ermende pol Halamwenlo de dates, \a «acuuad que tendra'n suramencana S.A y e empleador de almacenar, compamr, uulizar, procesar,
-        Iecolectal, dwulgar, (Ianslerir, transmit", mlolmacién relacionada con el estado de salud, en cumplimlemo de las dwsposiciones legale
+          Será posible compartir informacion con distintas entidades públicas (del nivel central, descentralizadas  y de vigilancia y control, de los demás autoridades administrativas y juridicas
+          ), para tomar acciones frente a la propagación, contagio y control de COVID-19. <br><br>
+          Se entiende como tratamiento de datos, la facultad que tendrán Suramericana S.A. y el empleador de almacenar, compartir, utilizar, procesar, recolectar, divulgar,tranferir, transmitir, informacion relacionada con el estado de salud, en cumplimiento de las disposiciones legales.
         </samp>
     </div>
 
@@ -25,10 +21,10 @@
     </div>
   </mat-step>
 
-  <mat-step [stepControl]="form">
+  <mat-step [stepControl]="form" errorMessage="Campo es Requerido.">
     <form [formGroup]="form">
       <ng-template matStepLabel>informacion de contacto</ng-template>
-
+      <div class="card">
       <mat-form-field appearance="fill">
         <mat-label>Tipo Documento</mat-label>
         <mat-select formControlName="tipoDocumento">
@@ -38,24 +34,28 @@
         </mat-select>
       </mat-form-field>
 
-<br>
+
+<br><br>
        <mat-form-field>
         <mat-label>Documento</mat-label>
-        <input matInput placeholder="Documento"  type="number" formControlName="documento" required>
+        <input matInput placeholder="Documento"  type="number" formControlName="numeroDocumento" required>
       </mat-form-field>
-<br>
+<br><br>
       <mat-form-field>
         <mat-label> Nombre</mat-label>
         <input matInput placeholder="Nombre Completo" formControlName="nombre" required>
       </mat-form-field>
 
+    </div>
+<br>
       <div>
         <button class="button" mat-button matStepperNext> Siguiente </button>
       </div>
     </form>
   </mat-step>
 
-  <mat-step [stepControl]="form">
+  <mat-step [stepControl]="form" errorMessage="Campo es Requerido.">
+    <div class="card">
     <form [formGroup]="form">
       <ng-template matStepLabel>Informacion general</ng-template>
 
@@ -71,7 +71,14 @@
 
       <mat-radio-group formControlName="malestarGeneral" aria-label="Select an option">
         <hr>
-        <p>¿Tienes malestar general o en los huesos?</p>
+        <p>¿Tienes malestar general o esclofrios que  te limite las actividades de la vida diaria?</p>
+        <mat-radio-button  value="si">si</mat-radio-button>
+        <mat-radio-button  value="no">no</mat-radio-button>
+      </mat-radio-group>
+
+      <mat-radio-group formControlName="dolorHueso" aria-label="Select an option">
+        <hr>
+        <p>¿Tienes dolor muscular o en los huesos?</p>
         <mat-radio-button  value="si">si</mat-radio-button>
         <mat-radio-button  value="no">no</mat-radio-button>
       </mat-radio-group>
@@ -99,17 +106,44 @@
 
       <div>
         <button class="button" mat-button matStepperPrevious>Atras</button>
-        <button class="btn" mat-button matStepperNext>Siguente</button>
+        <button class="btn"  (click)="create()" mat-button matStepperNext>Guardar</button>
       </div>
     </form>
+  </div>
   </mat-step>
 
   <mat-step>
     <ng-template matStepLabel></ng-template>
-    <p>You are now done.</p>
     <div>
+      <br>
+
+<h1  style="color: #0033a0;">Gracias por tus respuestas.</h1>
+      <p >
+        {{ currentDate | date:'dd-MM-yyyy HH:mm' }}
+      </p>
+      <p>Nuestra principal invitacióon a que mantengas la calma.</p>
+      <p><em>Ten en cuneta que la información a continuación no sustituye un diagnóstico ni una prescripción médica.</em></p>
+
+
+      <div class="card">
+        <p style="color: black;"> <strong style="color: rgb(31, 102, 21);">puedes asistir a tu sitio de trbajo. </strong>Hoy no has reportado sintomas de Covid-19. si estás, trabajando de manera remota, cotinúa con tus actividades normales y recuerda que debes diligenciar la encuesta de sintomas diariamente y cumplir las medidad de preveención para disminuir la posibilidad de contagio:
+<br><br>
+
+  <mat-list >
+    <mat-list-item> > Utiliza Siempre el tapa bocas,</mat-list-item>
+    <mat-list-item> > Evita tocar el tapabocas.</mat-list-item>
+    <mat-list-item> > evita comer.</mat-list-item>
+    <mat-list-item> > alimentos en la calle.</mat-list-item>
+    <mat-list-item> > evita tocarte la cara.</mat-list-item>
+    <mat-list-item> > Recuerda lavarte las manos con agua y jabón con frecuencias en especial al llegar atu trabajo y al llegar tu casa, antes de comer o tomar algo y antes de colocarte o retirarte el tapabocas.</mat-list-item>
+    <mat-list-item> > El tapabocas de tela debes lavarlo con agua y jabón despuesde usarlo</mat-list-item>
+    <mat-list-item> > Si has tenido resultados positivos de la prueba de COVID-19 en los ultimos 15 dias,debes informar el resultado y la conducta medica a tu empleador, y debes cumplir el aislamiento que te han indicado</mat-list-item>
+
+  </mat-list>
+</p>
+      </div>
       <button class="button" mat-button matStepperPrevious>Atras</button>
-      <button class="btn" mat-button (click)="create()">Finalizar</button>
+      <button class="btn" mat-button    (click)="stepper.reset()">Finalizar</button>
     </div>
   </mat-step>
 
